--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 conf.py
+Makefile
+examples.rst
+make.bat
+old_lab1.rst
+old_lab2.rst
+old_lab3.rst
+preamble.tex
+template_index.rst
+template_intr.rst
+/class1
